// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscoveryStatus page Renders correctly when claiming devices 1`] = `
<span
  className="has-text-weight-bold mb-20"
>
  <div
    className="inline-buttons"
  >
    <button
      className="button is-primary is-outlined is-uppercase is-paddingless mb-10"
      disabled={true}
      onClick={[MockFunction]}
    >
      ADD_DEVICES
    </button>
    <button
      className="button is-primary is-uppercase claim-devices-button"
      disabled={true}
      onClick={[MockFunction]}
    >
      20%
    </button>
  </div>
</span>
`;

exports[`DiscoveryStatus page Renders correctly when discovering 1`] = `
<span
  className="has-text-weight-bold mb-20"
>
  DISCOVERY_IN_PROGRESS
</span>
`;

exports[`DiscoveryStatus page Renders correctly when discovery complete and has errors 1`] = `
<Fragment>
  <div
    className="has-text-centered mb-10"
  >
    <span
      className="has-text-weight-bold mt-20"
    >
      BAD_REQUEST_OFFLINE
    </span>
  </div>
  <div
    className="is-flex"
  >
    <button
      className="button is-primary is-uppercase is-outlined is-fullwidth mr-10"
    >
      GO_BACK
    </button>
    <button
      className="button is-primary is-uppercase is-fullwidth ml-10"
      onClick={[MockFunction]}
    >
      RETRY
    </button>
  </div>
</Fragment>
`;

exports[`DiscoveryStatus page Renders correctly when ended discovering 1`] = `
<div
  className="is-flex"
>
  <button
    className="button is-primary is-outlined is-uppercase is-fullwidth mr-10"
    disabled={false}
  >
    ADD_DEVICES
  </button>
  <button
    className="button is-primary is-uppercase is-fullwidth ml-10 claim-devices-button"
    disabled={false}
    onClick={[MockFunction]}
  >
    CLAIM_DEVICES
  </button>
</div>
`;
